--- a/src/Makefile
+++ b/src/Makefile
@@ -6,21 +6,21 @@ include $(MYPATH)/physics/Makefile
 
 starprof: $(MAIN) $(MYPATH)/src/libs/main.h $(MYPATH)/src/libs/user.h
 	@echo ""
-	@echo "⢀⡴⠑⡄⠀⠀⠀⠀⠀⠀⠀⣀⣀⣤⣤⣤⣀⡀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀ "
-	@echo "⠸⡇⠀⠿⡀⠀⠀⠀⣀⡴⢿⣿⣿⣿⣿⣿⣿⣿⣷⣦⡀⠀⠀⠀⠀⠀⠀⠀⠀⠀ "
-	@echo "⠀⠀⠀⠀⠑⢄⣠⠾⠁⣀⣄⡈⠙⣿⣿⣿⣿⣿⣿⣿⣿⣆⠀⠀⠀⠀⠀⠀⠀⠀ "
-	@echo "⠀⠀⠀⠀⢀⡀⠁⠀⠀⠈⠙⠛⠂⠈⣿⣿⣿⣿⣿⠿⡿⢿⣆⠀⠀⠀⠀⠀⠀⠀ "
-	@echo "⠀⠀⠀⢀⡾⣁⣀⠀⠴⠂⠙⣗⡀⠀⢻⣿⣿⠭⢤⣴⣦⣤⣹⠀⠀⠀⢀⢴⣶⣆ "
-	@echo "⠀⠀⢀⣾⣿⣿⣿⣷⣮⣽⣾⣿⣥⣴⣿⣿⡿⢂⠔⢚⡿⢿⣿⣦⣴⣾⠁⠸⣼⡿ "
-	@echo "⠀⢀⡞⠁⠙⠻⠿⠟⠉⠀⠛⢹⣿⣿⣿⣿⣿⣌⢤⣼⣿⣾⣿⡟⠉⠀⠀⠀⠀⠀ "
-	@echo "⠀⣾⣷⣶⠇⠀⠀⣤⣄⣀⡀⠈⠻⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡇⠀⠀⠀⠀⠀⠀ "
-	@echo "⠀⠉⠈⠉⠀⠀⢦⡈⢻⣿⣿⣿⣶⣶⣶⣶⣤⣽⡹⣿⣿⣿⣿⡇⠀⠀⠀⠀⠀⠀ "
-	@echo "⠀⠀⠀⠀⠀⠀⠀⠉⠲⣽⡻⢿⣿⣿⣿⣿⣿⣿⣷⣜⣿⣿⣿⡇⠀⠀⠀⠀⠀⠀ "
-	@echo "⠀⠀⠀⠀⠀⠀⠀⠀⢸⣿⣿⣷⣶⣮⣭⣽⣿⣿⣿⣿⣿⣿⣿⠀⠀⠀⠀⠀⠀⠀ "
-	@echo "⠀⠀⠀⠀⠀⠀⣀⣀⣈⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⠇⠀⠀⠀⠀⠀⠀⠀ "
-	@echo "⠀⠀⠀⠀⠀⠀⢿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⠃⠀⠀⠀⠀⠀⠀⠀⠀ "
-	@echo "⠀⠀⠀⠀⠀⠀⠀⠹⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡿⠟⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀ "
-	@echo "⠀⠀⠀⠀⠀⠀⠀⠀⠀⠉⠛⠻⠿⠿⠿⠿⠛⠉		       "
+	@echo "⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣠⣤⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀"
+	@echo "⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣼⠏⠙⣷⡀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀"
+	@echo "⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣼⠏⠀⠀⠘⣧⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀"
+	@echo "⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣸⡏⠀⠀⠀⠀⠹⣧⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀"
+	@echo "⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣰⡟⠀⠀⠀⠀⠀⠀⢻⣆⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀"
+	@echo "⢀⣤⣤⣶⠶⠶⠾⠿⠿⠛⠛⠀⠀⠀⠀⠀⠀⠀⠀⠛⠛⠿⠿⠶⠶⠶⣶⣤⣤⡀"
+	@echo "⠘⣿⡀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠔⡀⠀⠀⢀⠢⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⣽⠏"
+	@echo "⠀⠈⠻⣦⡀⠀⠀⠀⠀⠀⠀⢸⣦⡇⠀⠀⢸⣤⡇⠀⠀⠀⠀⠀⠀⢀⣴⠟⠁⠀"
+	@echo "⠀⠀⠀⠈⠛⢷⣄⠀⠀⠀⠀⠘⣿⡇⠀⠀⠸⣿⠇⠀⠀⠀⠀⣠⣴⠟⠁⠀⠀⠀"
+	@echo "⠀⠀⠀⠀⠀⠀⠙⣷⡄⠀⠀⠀⠉⠀⠀⠀⠀⠉⠀⠀⠀⠠⣾⠋⠀⠀⠀⠀⠀⠀"
+	@echo "⠀⠀⠀⠀⠀⠀⢀⣿⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣿⡀⠀⠀⠀⠀⠀⠀"
+	@echo "⠀⠀⠀⠀⠀⠀⢸⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢸⣇⠀⠀⠀⠀⠀⠀"
+	@echo "⠀⠀⠀⠀⠀⠀⣿⠁⠀⠀⠀⠀⣀⣤⡾⢷⣤⣀⠀⠀⠀⠀⠀⣿⠀⠀⠀⠀⠀⠀"
+	@echo "⠀⠀⠀⠀⠀⢰⡿⠀⢀⣠⣴⠾⠋⠁⠀⠀⠈⠙⠷⣦⣄⡀⠀⢻⡇⠀⠀⠀⠀⠀"
+	@echo "⠀⠀⠀⠀⠀⠸⣿⠾⠟⠋⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠉⠛⠷⣾⠇⠀⠀⠀⠀⠀"
 	@echo ""
 	@echo "Compiling files..."
 	@echo ""
@@ -41,7 +41,7 @@ starprof: $(MAIN) $(MYPATH)/src/libs/main.h $(MYPATH)/src/libs/user.h
 	@echo "" 
 	
 clean:
-	rm stars
+	rm -f *.o *.dat *.png stars
 	
 save:
 	tar -czvf archive.tar.gz $(MYPATH)/start/profile.png \
