--- a/start/Makefile
+++ b/start/Makefile
@@ -1,7 +1,7 @@
 MYPATH 	= $(STARS_PATH)
 EOS 		= POLYTROPIC
 REGIME 	= RELATIVISTIC
-EJECUTION 	= FPROFILE
+EJECUTION 	= SPROFILE
 SOLVER 	= RK4
 
 include $(MYPATH)/src/Makefile
