--- a/start/Makefile
+++ b/start/Makefile
@@ -1,5 +1,6 @@
 MYPATH 	= $(STARS_PATH)
-EOS 		= POLYTROPIC
+#EOS 		= POLYTROPIC
+EOS		= GPPOLYTROPIC
 REGIME 	= RELATIVISTIC
 EJECUTION 	= SPROFILE
 SOLVER 	= RK4
