No tracking output files & jpnotebooks

--- a/start/Makefile
+++ b/start/Makefile
@@ -1,5 +1,5 @@
 MYPATH 	= $(STARS_PATH)
-#EOS 		= POLYTROPIC
+#EOS 		= GPPOLYTROPIC
 EOS		= GPPOLYTROPIC
 REGIME 	= RELATIVISTIC
 EJECUTION 	= SPROFILE
