Improvements in user parameters

--- a/src/io/input/Makefile
+++ b/src/io/input/Makefile
@@ -1,8 +1,2 @@
-MAIN += $(MYPATH)/start/initial.c
-
-ifeq ($(EJECUTION),SPROFILE)
-	MAIN += $(MYPATH)/src/io/input/SPROFILE/input.c
-endif
-ifeq ($(EJECUTION),FPROFILE)
-	MAIN += $(MYPATH)/src/io/input/FPROFILE/input.c
-endif
+MAIN += $(MYPATH)/start/user.c \
+		$(MYPATH)/src/io/input/input.c
