--- a/start/Makefile
+++ b/start/Makefile
@@ -1,6 +1,6 @@
 MYPATH 	= $(STARS_PATH)
-#EOS 		= GPPOLYTROPIC
-EOS		= GPPOLYTROPIC
+EOS 		= POLYTROPIC
+#EOS		= GPPOLYTROPIC
 REGIME 	= RELATIVISTIC
 EJECUTION 	= SPROFILE
 SOLVER 	= RK4
