--- a/src/integration/Makefile
+++ b/src/integration/Makefile
@@ -1,5 +1,5 @@
 MAIN += $(MYPATH)/src/integration/bisection.c \
-		$(MYPATH)/src/integration/save.c
+		$(MYPATH)/src/integration/save.c \
+			$(MYPATH)/src/integration/algorithm.c
 
 include $(MYPATH)/src/integration/methods/Makefile
-include $(MYPATH)/src/integration/model/Makefile
