--- a/start/Makefile
+++ b/start/Makefile
@@ -1,8 +1,35 @@
+###########################################
+# PATH from enviromment variable
+###########################################
 MYPATH 	= $(STARS_PATH)
+###########################################
+# Equation of State (Polytropic or
+# generalized piecewise polytropic)
+###########################################
 EOS 		= POLYTROPIC
 #EOS		= GPPOLYTROPIC
+###########################################
+# Star regime, Classical or relativistic
+###########################################
 REGIME 	= RELATIVISTIC
-EJECUTION 	= SPROFILE
+#REGIME	= CLASSIC
+###########################################
+# What do you want to get? a single profile
+# given a central density or a family of
+# stars given a central density range
+###########################################
+#EJECUTION 	= SPROFILE
+EJECUTION 	= FPROFILE
+############################################
+# Integration methods RK4, RK3, RK2
+############################################
 SOLVER 	= RK4
-
+############################################
+# Next, a variable for activate/deactivate
+# bisection method
+############################################
+#BISECTION	= TRUE
+############################################
+# Include a global makefile
+############################################
 include $(MYPATH)/src/Makefile
